<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="news"
            type="com.iti.example.pomacnewstask.pojos.News" />
        <variable
            name="newsClickListener"
            type="com.iti.example.pomacnewstask.newswireList.views.NewsListAdapter.NewsListClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card_background"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()->newsClickListener.onClick(news)}"
                android:paddingStart="4dp"
                android:paddingEnd="4dp">

                <ImageView
                    android:id="@+id/newsImage_imgView_listItem_news"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/news_image_desc"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:newsImage="@{news.multimedia}"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/newsTitle_txtView_listItem_news"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:singleLine="false"
                    android:text="@{news.title}"
                    app:layout_constraintBottom_toTopOf="@+id/newsAbstract_txtView_listItem_news"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/newsImage_imgView_listItem_news"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.4"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/title_placeholder"
                    style="@style/title_text_style" />

                <TextView
                    android:id="@+id/newsAbstract_txtView_listItem_news"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@{news.abstract}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/newsTitle_txtView_listItem_news"
                    app:layout_constraintTop_toBottomOf="@+id/newsTitle_txtView_listItem_news"
                    tools:text="@string/abstract_placeholder"
                    style="@style/sub_title_text_style" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>